--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
+ <body>
 <h1>My Homepage</h1>
+ </body>
 <img src="https://www.unco.edu/marketing-communications/assets/logos/15_unc_bear_mg_horiz_c.png" alt="UNC LOGO"> 
+ <body>
+<p>My<a href="https://natelloydcurt.github.io/inspire.html/">Hero</a>.</p>
+<p>My<a href="https://natelloydcurt.github.io/profile.html/">Profile</a>.</p>
+<p>My<a href="https://natelloydcurt.github.io/amuse.html/">Amusement</a>.</p>
+ </body>
