--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  </body>
 <img src="https://www.unco.edu/marketing-communications/assets/logos/15_unc_bear_mg_horiz_c.png" alt="UNC LOGO"> 
  <body>
-<p>My<a href="https://natelloydcurt.github.io/inspire.html/">Hero</a>.</p>
-<p>My<a href="https://natelloydcurt.github.io/profile.html/">Profile</a>.</p>
-<p>My<a href="https://natelloydcurt.github.io/amuse.html/">Amusement</a>.</p>
+<p>My<a href="https://natelloydcurt.github.io/inspire.html">Hero</a>.</p>
+<p>My<a href="https://natelloydcurt.github.io/profile.html">Profile</a>.</p>
+<p>My<a href="https://natelloydcurt.github.io/amuse.html">Amusement</a>.</p>
  </body>
