--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
- <body>
+ <heading>
 <h1>My Homepage</h1>
- </body>
+ </heading>
 <img src="https://www.unco.edu/marketing-communications/assets/logos/15_unc_bear_mg_horiz_c.png" alt="UNC LOGO"> 
  <body>
 <p>My<a href="https://natelloydcurt.github.io/inspire.html">Hero</a>.</p>
