--- a/test.html
+++ b/test.html
@@ -2,6 +2,11 @@
 <h1>Testing Page</h1>
 </heading>
 <table>
+    <tr>
+      <th>Page Name</th>
+      <th>URL</th>
+      <th>Validate</th>
+   </tr>
    <tr>
       <th>Template</th>
       <th><a href="https://natelloydcurt.github.io/template.html">https://natelloydcurt.github.io/template.html</a>.</th>
