--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <heading>
 <h1>My Homepage</h1>
  </heading>
-<img src="https://www.unco.edu/marketing-communications/assets/logos/15_unc_bear_mg_horiz_c.png" alt="UNC LOGO"> 
+<img src="https://github.com/NateLloydCurt/NateLloydCurt.github.io/blob/main/images/15_unc_bear_mg_horiz_c.png" alt="UNC LOGO"> 
  <body>
 <p>My<a href="https://natelloydcurt.github.io/inspire.html">Hero</a>.</p>
 <p>My<a href="https://natelloydcurt.github.io/profile.html">Profile</a>.</p>
