--- a/profile.html
+++ b/profile.html
@@ -1,2 +1,2 @@
-<img src="https://github.com/NateLloydCurt/NateLloydCurt.github.io/blob/main/images/IMG_1513.png.HEIC" alt=silly picture of me>
+<img src="https://github.com/NateLloydCurt/NateLloydCurt.github.io/blob/main/images/me.png?raw=true" alt=silly picture of me>
 <p>here is a goofy picture of me</p>
