--- a/inspire.html
+++ b/inspire.html
@@ -5,7 +5,7 @@
     <body>
         <h1>Blake Mycoskie</h1>
         <h2>Portrait</h2>
-        <img src="https://github.com/NateLloydCurt/NateLloydCurt.github.io/blob/main/images/R1601A_BRINSON.jpg" alt="TOMS">
+        <img src="https://github.com/NateLloydCurt/NateLloydCurt.github.io/blob/main/images/R1601A_BRINSON.jpg?raw=true" alt="TOMS">
         <h2>What makes a hero?</h2>
         <p>A hero is someone that we look up to. Heroes embody what we truly value most. Therefore who we select as role models says a lot about who we are as people.</p>
         <p>In recnet times I think a great modenr day hero is Blake Mycoskie. He is the creator of TOMS and uses his company to help those in need. Whenever someone buys a pair of his shoes he donates a pair to someone in need.</p>
