--- a/test.html
+++ b/test.html
@@ -18,3 +18,7 @@
       <th><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fnatelloydcurt.github.io%2Famuse.html">Validate</a>.</th>
    </tr>
 </table>
+
+ <p>
+    <a href="https://natelloydcurt.github.io/index.html">Home</a>
+  </p>
