--- a/superhero.html
+++ b/superhero.html
@@ -1,1 +1,36 @@
-
+<table>
+    <tr>
+      <th>Hero</th>
+      <th>Batman</th>
+      <th>Superman</th>
+      <th>Greengoblin</th>
+      <th>Spiderman</th>
+   </tr>
+   <tr>
+       <th>Alias</th>
+       <th>Bruce Wayne</th>
+       <th>Clark Kent</th>
+       <th>Norman Osborn</th>
+       <th>Peter Parker</th>
+   </tr>
+    <tr>
+      <th>Image</th>
+      
+   </tr>
+   <tr>
+      <th>Powers</th>
+      <th>Martial Arts, Gadgets, Money</th>
+      <th>Flight, Invincible, Laser Vision, Super Strength, Freeze Breathe, Super Speed</th>
+      <th>Gadgets, Super Strength, Durabilaty</th>
+      <th>Spider Sense, Super Strength, Super Fast Reflexes, Webs, Durabilaty</th>
+   </tr>
+  <tr>
+      <th>Weaknesses</th>
+      <th>None</th>
+      <th>Kryptonite, Lack of Sunlight</th>
+      <th>Crazy</th>
+      <th>Work, Life, Superhero balance</th>
+   
+   </tr>
+  
+</table>
