--- a/superhero.html
+++ b/superhero.html
@@ -3,7 +3,7 @@
       <th>Hero</th>
       <th>Batman</th>
       <th>Superman</th>
-      <th>Greengoblin</th>
+      <th>Deadpool</th>
       <th>Spiderman</th>
    </tr>
    <tr>
@@ -15,20 +15,23 @@
    </tr>
     <tr>
       <th>Image</th>
-      
+      <th><img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/51/Batman_%281966_TV_series_logo%29.svg/1200px-Batman_%281966_TV_series_logo%29.svg.png" alt=Batman></th>
+        <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Superman_S_symbol.svg/1200px-Superman_S_symbol.svg.png" alt=Superman></th>
+        <th><img src="https://images.cdn.prd.api.discomax.com/2024/02/25/1082ca5e-4f8b-3ef6-ba5b-e28109d6dbc8.jpeg?f=jpg&q=75&w=1280&w=1200" alt=Deadpool></th>
+        <th><img src="https://cdn.marvel.com/content/1x/005smp_ons_cut_dsk_01_5.jpg" alt=Spiderman></th>
    </tr>
    <tr>
       <th>Powers</th>
       <th>Martial Arts, Gadgets, Money</th>
       <th>Flight, Invincible, Laser Vision, Super Strength, Freeze Breathe, Super Speed</th>
-      <th>Gadgets, Super Strength, Durabilaty</th>
+      <th>Regeneration, Martial Arts</th>
       <th>Spider Sense, Super Strength, Super Fast Reflexes, Webs, Durabilaty</th>
    </tr>
   <tr>
       <th>Weaknesses</th>
       <th>None</th>
       <th>Kryptonite, Lack of Sunlight</th>
-      <th>Crazy</th>
+      <th>Crazy, Kittens</th>
       <th>Work, Life, Superhero balance</th>
    
    </tr>
