--- a/superhero.html
+++ b/superhero.html
@@ -15,10 +15,10 @@
    </tr>
     <tr>
       <th>Image</th>
-      <th><img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/51/Batman_%281966_TV_series_logo%29.svg/1200px-Batman_%281966_TV_series_logo%29.svg.png" alt=Batman></th>
-        <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Superman_S_symbol.svg/1200px-Superman_S_symbol.svg.png" alt=Superman></th>
-        <th><img src="https://images.cdn.prd.api.discomax.com/2024/02/25/1082ca5e-4f8b-3ef6-ba5b-e28109d6dbc8.jpeg?f=jpg&q=75&w=1280&w=1200" alt=Deadpool></th>
-        <th><img src="https://cdn.marvel.com/content/1x/005smp_ons_cut_dsk_01_5.jpg" alt=Spiderman></th>
+      <th><img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/51/Batman_%281966_TV_series_logo%29.svg/1200px-Batman_%281966_TV_series_logo%29.svg.png" alt=Batman height="100px"></th>
+        <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Superman_S_symbol.svg/1200px-Superman_S_symbol.svg.png" alt=Superman height="100px"></th>
+        <th><img src="https://images.cdn.prd.api.discomax.com/2024/02/25/1082ca5e-4f8b-3ef6-ba5b-e28109d6dbc8.jpeg?f=jpg&q=75&w=1280&w=1200" alt=Deadpool height="100px"></th>
+        <th><img src="https://cdn.marvel.com/content/1x/005smp_ons_cut_dsk_01_5.jpg" alt=Spiderman height="100px"></th>
    </tr>
    <tr>
       <th>Powers</th>
