--- a/superhero.html
+++ b/superhero.html
@@ -7,10 +7,10 @@ table {
 <table>
     <tr>
       <th>Hero</th>
-      <th>Batman</th>
-      <th>Superman</th>
-      <th>Deadpool</th>
-      <th>Spiderman</th>
+      <th><span style="color: black">Batman</span></th>
+      <th><span style="color: blue">Superman</span></th>
+      <th><span style="color: red">Dead</span><span style="color: black">pool</span></th>
+      <th><span style="color: red">Spider</span><span style="color: blue">man</span></th>
    </tr>
    <tr>
        <th>Alias</th>
