--- a/superhero.html
+++ b/superhero.html
@@ -16,7 +16,7 @@ table {
        <th>Alias</th>
        <th>Bruce Wayne</th>
        <th>Clark Kent</th>
-       <th>Norman Osborn</th>
+       <th>Wade Wilson</th>
        <th>Peter Parker</th>
    </tr>
     <tr>
