--- a/amuse.html
+++ b/amuse.html
@@ -1,4 +1,6 @@
 <h2>Internet Humor</h2>
+<link rel="stylesheet" href+"css/main.css">
+
 <p>
  <a href="https://youtu.be/_2jv5c5fV7I?si=FGl7msa4faVpJ92S">Funny Video One</a>
 </p>
