--- a/template.html
+++ b/template.html
@@ -1,4 +1,5 @@
 <h1>Page Heading</h1>
+<link rel="stylesheet" href="css/main.css">
  <p>
     <a href="https://natelloydcurt.github.io/index.html">Home</a>
   </p>
