--- a/test.html
+++ b/test.html
@@ -1,6 +1,8 @@
+<head>
+ <link rel="stylesheet" href="css/main.css">
+</head>
 <heading>
 <h1>Testing Page</h1>
-<link rel="stylesheet" href="css/main.css">
 </heading>
 <table>
     <tr>
