--- a/template.html
+++ b/template.html
@@ -1,5 +1,7 @@
+<head>
+ <link rel="stylesheet" href="css/main.css">
+</head>
 <h1>Page Heading</h1>
-<link rel="stylesheet" href="css/main.css">
  <p>
     <a href="https://natelloydcurt.github.io/index.html">Home</a>
   </p>
