--- a/superhero.html
+++ b/superhero.html
@@ -1,4 +1,6 @@
-<link rel="stylesheet" href="css/main.css">
+<head>
+ <link rel="stylesheet" href="css/main.css">
+</head>
 <style>
 table {
    font-family: "Verdana", "Arial", sans-serif;
