--- a/profile.html
+++ b/profile.html
@@ -1,3 +1,5 @@
-<link rel="stylesheet" href="css/main.css">
+<head>
+ <link rel="stylesheet" href="css/main.css">
+</head>
 <img src="https://github.com/NateLloydCurt/NateLloydCurt.github.io/blob/main/images/me.png?raw=true" alt=silly picture of me>
 <p>here is a goofy picture of me</p>
