--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<link rel="stylesheet" href="css/main.css">
+<head>
+ <link rel="stylesheet" href="css/main.css">
+</head>
 <heading>
 <h1>My Homepage</h1>
  </heading>
