--- a/amuse.html
+++ b/amuse.html
@@ -1,4 +1,6 @@
-<link rel="stylesheet" href="css/main.css">
+<head>
+ <link rel="stylesheet" href="css/main.css">
+</head>
 <h2>Internet Humor</h2>
 <link rel="stylesheet" href="css/main.css">
 
