--- a/profile.html
+++ b/profile.html
@@ -2,4 +2,4 @@
  <link rel="stylesheet" href="css/main.css">
 </head>
 <img src="https://github.com/NateLloydCurt/NateLloydCurt.github.io/blob/main/images/me.png?raw=true" alt=silly picture of me>
-<p>here is a goofy picture of me</p>
+<p class="likes">here is a goofy picture of me</p>
