--- a/profile.html
+++ b/profile.html
@@ -3,3 +3,9 @@
 </head>
 <img src="https://github.com/NateLloydCurt/NateLloydCurt.github.io/blob/main/images/me.png?raw=true" alt=silly picture of me>
 <p class="likes">here is a goofy picture of me</p>
+<p>my likes</p>
+<ul>
+<li>choclate cake</li>
+<li>video games</li>
+<li>pizza</li>
+</ul>
