--- a/resume/index.html
+++ b/resume/index.html
@@ -1,1 +1,24 @@
+<head>
+ <link rel="stylesheet" href="css/main.css">
+</head>
+<h2>Resume</h2>
+<link rel="stylesheet" href="css/main.css">
 
+<p>
+ <a>Contact Info</a>
+  <li>nathanjohnson@email.com</li>
+  <li>7 989 288 6969</li>
+</p>
+ 
+ <p>
+   <a>Education</a>
+   <li>Clown College</li>
+ </p> 
+  <p>
+    <a>Experience</a>
+    <li>None</li>
+  </p>
+<p>
+    <a>Skills</a>
+    <li>Can tie my shoes and sing the blues</li>
+  </p>
