--- a/resume/index.html
+++ b/resume/index.html
@@ -12,7 +12,7 @@
  
  <p>
    <a>Education</a>
-   <li>Clown College</li>
+   <li href ="https://www.theclownschool.com/">Clown College</li>
  </p> 
   <p>
     <a>Experience</a>
