--- a/resume/index.html
+++ b/resume/index.html
@@ -1,8 +1,8 @@
 <head>
- <link rel="stylesheet" href="css/main.css">
+ <link rel="stylesheet" href="css/style.css">
 </head>
 <h2>Resume</h2>
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/style.css">
 
 <p>
  <a>Contact Info</a>
