--- a/resume/index.html
+++ b/resume/index.html
@@ -13,6 +13,7 @@
  <p>
    <a>Education</a>
    <li href="https://www.theclownschool.com/">Clown College</li>
+   <img src="https://img.freepik.com/free-vector/colourful-clown-cartoon-character_1308-95841.jpg" alt="Clown">
  </p> 
   <p>
     <a>Experience</a>
