--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
 <p>My<a href="https://natelloydcurt.github.io/inspire.html">Hero</a>.</p>
 <p>My<a href="https://natelloydcurt.github.io/profile.html">Profile</a>.</p>
 <p>My<a href="https://natelloydcurt.github.io/amuse.html">Amusement</a>.</p>
+<p>My<a href="https://natelloydcurt.github.io/resume/index.html">Resume</a>.</p>
  </body>
